# TITrack

./: AGENTS.md  README.md  pyproject.toml  ti_tracker.spec
scripts/: build_linux.sh
src/titrack/api/routes/: cloud.py  settings.py
src/titrack/cli/: commands.py
src/titrack/config/: paths.py  settings.py
src/titrack/data/: README.txt
src/titrack/db/: connection.py
src/titrack/sync/: client.py  manager.py
src/titrack/updater/: github_client.py  installer.py
src/titrack/web/static/: app.js  overlay.css  overlay.html  overlay.js
